--- a/src/Con&foot.css
+++ b/src/Con&foot.css
@@ -3,7 +3,7 @@
    
     width: 1260px;
     background-color: #fff;
- 
+    margin:0 auto
    
 }
 .top{
@@ -139,34 +139,35 @@
     padding:20px;
     background-color: #000;
     height: 380px;
-    width: 1260px;
+    width: 100%;
     display: flex;
     border-bottom:1px solid rgb(213, 204, 204);
     box-sizing: border-box;
-
+    justify-content: center
     
 } 
 
 .company{
     margin-left: 10px;
     height: 100%;
-    width: 300px;
+    width: 25%;
 }
 .compan{
-    height: 100%;
-    width: 400px;
-    margin-left: 10px;
-    margin-bottom: 20px;
+    /* height: 100%;
+    width: 400px; */
+    /* margin-left: 10px;
+    margin-bottom: 25%; */
+    margin: 0px 111px;
 }
 .contact{
     
     height: 100%;
-    width: 300px;
+    width: 25%;
 }
 .legal{
    
     height: 100%;
-    width: 400px;
+    width: 25%;
 }.comp{
     color: rgb(253, 253, 253);
     cursor: pointer;
@@ -226,7 +227,7 @@
 }
 .foothead1{
     height: auto;
-    width: 1260px; 
+    width: 100%; 
     padding: 20px;
     box-sizing: border-box;
     background-color: #000;padding: 10px;
@@ -242,7 +243,7 @@
 .footericon{
 
     height: 120px;
-    width: 1260px;
+    width: 100%;
     background-color: #000;
     border-top:1px solid #e9e9eb ;
     box-sizing: border-box;
