--- a/src/SearchFolder/SearhDesign.css
+++ b/src/SearchFolder/SearhDesign.css
@@ -11,6 +11,7 @@
     width: 400px;
     margin: 0px 10px;
     height: 50px;
+    position: relative;
 
 }
 
@@ -21,9 +22,9 @@
 }
 
 .searcicon {
-    position: relative;
-    left: 160px;
-    bottom: 27px;
+    position: absolute;
+    top: 17px;
+    right: 25px;
 
 }
 
