--- a/src/Header/Container.css
+++ b/src/Header/Container.css
@@ -7,45 +7,147 @@
    
 }
 .top{
-    /* height: 100%; */
+    
     width: 100%;
-    margin-top: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: #fff;
+    margin: 32px 16px;
+    padding: 0px;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    justify-content: space-between;
+    grid-template-columns: repeat(4,1fr);
+    gap: 32px;
     align-items:center ;
+    margin-bottom: 40px;
 
 }
-.res1{
-    margin-top: 20px;
-    height: 300px;
-    width: 260px;
-    background-color: #fff;
-    padding: 20px;
-    
+.anchor{
+    text-decoration: none;
+    color: inherit;
+    outline: 0px;
+    cursor: pointer;
 }
-.res1:hover{
-    border: 1px solid #686b78;
-    box-shadow: 0px 0px 2px 2px #e4e0e0;
+.sibisupdate1{
+    display: grid;
+    transition: all 0.05s ease 0s;
+    cursor: pointer;
+    gap: 12px;
+    grid-auto-flow: row;
+    justify-content: stretch;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 0px;
 }
-.res2{
-    height: 300px;
+.sibisupdate1:hover{
+    transform: scale(0.9);
+}
+.sibisupdate2{
+    position: relative;
+}
+.sibisupdate2::before{
+    content: "";
+    height: 0px;
+    display: block;
+    padding-top: calc(66.6667%);
+}
+.sibisupdate3{
+    position: absolute;
+    top: 0px;
+    left: 0px;
     width: 100%;
-    background-color: #fff;
+    height: 100%
 }
-.res3{
-    height: auto;
-    box-sizing: border-box;
-    background-color: #fff;
+.sibisupdate4{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    overflow: hidden;
+    filter: drop-shadow(rgba(0, 0, 0, 0.1) 0px 2px 8px);
 }
-.res4{
-    height: 170px;
-    width: 100;
+.sibisupdate4 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
+.sibisgrid{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    display: grid;
+    align-content: end;
+    text-align: left;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-bottom: 8px;
+    height: calc(81px);
+    background: linear-gradient(rgba(27, 30, 36, 0) 0%, rgb(27, 30, 36) 84.21%);
+}
+.offer{
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 22px;
+    line-height: 22px;
+    letter-spacing: -0.5px;
+    color: rgba(255, 255, 255, 0.92);
+    overflow: hidden;
+
+}
+.holeinfo{
+    margin-left: 14px;
+}
+.hotelname{
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: -0.3px;
+    color: rgba(2, 6, 12, 0.75);
+    overflow: hidden;
+    width: 100%;
+}
+.ratingdiv{
+    display: grid;
+    align-items: center;
+    margin-top: 2px;
+    gap: 2px;
+    grid-auto-flow: column;
+    justify-content: start;
+}
+.icon span{
+    border-radius: 22px;
+    padding: 2px;
+    background-color: green;
+    color: white;
+    font-size: 12px
+}
+.iconstar{
+    color: green;
+}
+.rating{
+    margin-left: 2px;
+}
+.spanrating{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    letter-spacing: -0.3px;
+    color: rgba(2, 6, 12, 0.75);
+};
+.cusinediv{
+    display: grid;
+    align-items: center;
+    margin-top: 2px;
+    gap: 2px;
+}
+.cusines{
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 19px;
+    letter-spacing: -0.3px;
+    color: black;
+    overflow: hidden;
+    width: 100%;
+}
+
 .hname{
     font-size: 17px;
     font-weight: 500;
